# obsidian_syncer

./: .gitignore  Cargo.toml  README.md  \
src/: lib.rs  logging.rs  main.rs  structs.rs
src/cryptography/: delta.rs  mod.rs  signatures.rs
