[package]
name = "obsidian_syncer"
version = "0.1.0"
edition = "2024"

[dependencies]
better-panic = "0.3.0"
color-eyre = "0.6.5"
directories = "6.0.0"
dirs = "6.0.0"
human-panic = "2.0.3"
itertools = "0.14.0"
libc = "0.2.175"
notify = "8.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
strip-ansi-escapes = "0.2.1"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
